CSS fixes for benjie button settings on mobile

--- a/app/static/styles/settings.css
+++ b/app/static/styles/settings.css
@@ -19,4 +19,12 @@
   }
 }
 
-
+.tripcode_history, .regen_tripcode {
+  @media @mobile {
+    width: 100%;
+    clear: both;
+    margin: 0px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+}
